add start and parcel

--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "new_project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "source": "./src/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel --open"
   },
-  "keywords": ["gh-pages"],
+  "keywords": [
+    "gh-pages"
+  ],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.6.2",
+    "parcel": "^2.6.2"
+  }
 }
