add lodash and prebuild

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "source": "./src/index.html",
   "scripts": {
     "start": "parcel --open",
-    "build": "parcel build"
+    "prebuild": "rm -rf ./dist",
+    "build": "parcel build --public-url ./",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [
     "gh-pages"
@@ -14,6 +17,10 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.2",
+    "gh-pages": "^4.0.0",
     "parcel": "^2.6.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
