--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "parcel build --public-url ./",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "lint": "eslint ./src",
+    "lint": "eslint ./src --ext .ts",
     "lint:fix": "eslint ./src --fix",
     "prepare": "husky install"
   },
@@ -20,14 +20,17 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.2",
+    "@parcel/validator-typescript": "^2.6.2",
+    "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "gh-pages": "^4.0.0",
+    "husky": "^8.0.0",
     "parcel": "^2.6.2",
-    "husky": "^8.0.0"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "bulma": "^0.9.4",
