--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -11,10 +11,10 @@ name: ESLint
 
 on:
   push:
-    branches: [ "ci-cd-support" ]
+    branches: [ "master" ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "ci-cd-support" ]
+    branches: [ "master" ]
 
 
 jobs:
